--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "react-datepicker/dist/react-datepicker.css";
+@import 'tailwindcss';
+@import 'react-datepicker/dist/react-datepicker.css';
 
 :root {
   --background: #ffffff;
@@ -24,4 +24,17 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer base {
+  input,
+  textarea,
+  select {
+    @apply text-gray-900 text-sm;
+  }
+
+  input::placeholder,
+  textarea::placeholder {
+    @apply text-gray-500 opacity-100;
+  }
 }
